--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ OUTPUT
 
 # R Projects
 0x520x.Rproj
+
+#Videos and Datasets
+10 Mini Project CourseWork/Videos/
+10 Mini Project CourseWork/Datasets/
