ignore data and videos

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,5 @@ OUTPUT
 0x520x.Rproj
 
 #Videos and Datasets
-10 Mini Project CourseWork/Videos/
-10 Mini Project CourseWork/Datasets/
+10. Mini Project CourseWork/Videos/
+10. Mini Project CourseWork/Datasets/
