--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ OUTPUT
 #Videos and Datasets
 10. Mini Project CourseWork/Videos/
 10. Mini Project CourseWork/Datasets/
+ Geostat2018-master.zip
+
