Mini project pulled and ignored

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ OUTPUT
 10. Mini Project CourseWork/Videos/
 10. Mini Project CourseWork/Datasets/
 
+# Private Mini project workks
+10. Mini Project CourseWork
+
