--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ OUTPUT
 .RData
 
 #Videos and Datasets
-10. Mini Project CourseWork/Videos/
+10. Mini Project CourseWork/Articles/
 10. Mini Project CourseWork/Datasets/
 
 # Private Mini project workks
