Final working code

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,5 @@ OUTPUT
 10. Mini Project CourseWork/Articles/
 10. Mini Project CourseWork/Datasets/
 
-# Private Mini project workks
-10. Mini Project CourseWork
+# Private Mini project works
 
